--- a/CSS Practice/styles/styles.css
+++ b/CSS Practice/styles/styles.css
@@ -1,25 +1,28 @@
-body {
-    text-align: center;
-  }
-nav {
-    background-color: steelblue;
-    padding: 10px;
-}
-a {
-    color: white;
-    margin: 40px;
-}
-h1 {
-    color: steelblue;
-}
-img {
-    width: 800px;   
-    border: 4px solid steelblue;
-}
-p {
-    padding: 10px;
-}
 footer {
     background-color: steelblue;
     color: white;
+}
+footer p {
+    padding: 25px;
+}
+h1 {
+    margin: 50px 0;
+}
+nav {
+    background-color: steelblue;
+}
+a {
+    color: white;
+}
+nav {
+    padding: 25px;
+}
+a {
+    padding: 25px;
+}
+body {
+    margin: 0
+}
+img {
+    border: 4px solid steelblue;
 }
