--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,21 +1,35 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
 :root{
     --primary-color: #ADBCFF;
     --secondary-color: #7D83FF;
     --accent1-color: #007FFF;
     --accent2-color: #0A0A0A;    
+    --heading-font: "Kalam";
+    --paragraph-font: "Noto Serif", Helvetica, sans-serif;
 }
 
 main section{
     text-align: center;
 }
-
+main section img{
+    box-sizing: border-box;
+}
 body{
     background-color: var(--primary-color);
+    font-family: var(--paragraph-font), Arial, Georgia  ;
+    font-size: 22px;
+    padding: 0;
+    margin: 0;
 }
 
 header{
     background-color: var(--accent1-color);
+    font-family: var(--heading-font), Arial, Georgia;
+    font-size: 2em;
+    margin: 0;
 }
 
 
@@ -23,6 +37,8 @@ footer{
     font-size:1.3em;
     background-color: var(--accent1-color);
     color: var(--accent2-color);
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a{
     color: var(--accent2-color);
@@ -36,16 +52,20 @@ footer a:hover{
     color: var(--accent2-color);
     
 }
+footer .social img{
+    padding-top:15px;
+}
 
 
 nav a{
     text-align: center;
     color: var(--accent2-color);
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover{
     background-color: var(--accent2-color);
-    color: var(--accent1-color);
+    color: white;
 }
 
 h4{
@@ -70,15 +90,24 @@ h4{
 #hero_msg h4{
     text-align: center;
 }
-
+#logo_link{
+    padding-top: 5px;
+}
+.card_img{
+    border: 10px solid var(--secondary-color);
+}
 .logo{
     width:80px;
 }
 .icon{
     width:80px; 
+    padding-top: 10px;
 }
 .home_title{
     color: var(--accent2-color);
+    font-family: var(--heading-font), Arial, Georgia;
+    margin-top: 10px;
+
 }
 .button_box{
     text-align: center;
@@ -87,19 +116,32 @@ h4{
     background-color: #9A9A9A;
     color: var(--accent2-color);
     text-decoration: none;
+    font-size : 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color: var(--accent2-color);
-    color: var(--accent1-color);
+    color: white;
 }
 .msg{
     background-color: var(--secondary-color);
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
     color: var(--accent2-color);
+    font-family: var(--heading-font), Arial, Georgia;
+    font-size: 1em;
+
 }
 .msg p{
     color: var(--accent2-color);
+    font-size:.8em;
+    padding-bottom: 15px;
 }
-
+.rivers_card, .camping_card, .rapids-card{
+    margin: 200px 0;
+}
 
