--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -26,9 +26,12 @@ body{
 }
 
 header{
+    display: grid;
+    grid-template-columns: 150px auto;
+
     background-color: var(--accent1-color);
     font-family: var(--heading-font), Arial, Georgia;
-    font-size: 2em;
+    font-size: 30px;
     margin: 0;
 }
 
@@ -39,6 +42,9 @@ footer{
     color: var(--accent2-color);
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a{
     color: var(--accent2-color);
@@ -56,45 +62,80 @@ footer .social img{
     padding-top:15px;
 }
 
-
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 nav a{
     text-align: center;
     color: var(--accent2-color);
     text-decoration: none;
     padding: 35px;
+    font-size: 30px;
+
 }
 nav a:hover{
     background-color: var(--accent2-color);
     color: white;
 }
 
-h4{
-    color: var(--accent2-color);
-}
-
 #background{
     height: 725px;
     background-color: var(--secondary-color);
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 #content {
     max-width: 1600px ;
     margin: 0 auto;
 }
+#hero {
+    display:grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero_msg{
+    margin-top: 100px;
+    grid-column:2/3;
+    grid-row: 1/2;
+    color:white;
+}
+#hero_box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero_img{
     width: 100%;
 }
 #hero_msg h1{
     text-align: center;
 }
-
 #hero_msg h4{
     text-align: center;
 }
+
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+.home_grid{
+    display:grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 .card_img{
     border: 10px solid var(--secondary-color);
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card_img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card_img, .mountains{
+    width:100%
 }
 .logo{
     width:80px;
@@ -104,7 +145,7 @@ h4{
     padding-top: 10px;
 }
 .home_title{
-    color: var(--accent2-color);
+    color: white;
     font-family: var(--heading-font), Arial, Georgia;
     margin-top: 10px;
 
@@ -129,6 +170,9 @@ h4{
     background-color: var(--secondary-color);
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2{
     color: var(--accent2-color);
@@ -141,7 +185,64 @@ h4{
     font-size:.8em;
     padding-bottom: 15px;
 }
-.rivers_card, .camping_card, .rapids-card{
-    margin: 200px 0;
+
+.rivers_card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping_card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids_card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
