--- a/ScoresbyFarms/styles/styles.css
+++ b/ScoresbyFarms/styles/styles.css
@@ -1,8 +1,147 @@
 
 
 
+#content{
+background-color: #FFE8D6;
+text-align: center;
+}
 
 
+/* *//* Header STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
+
+header{
+  background-color: #B7B7A4;
+}
+#header_content{
+  margin: 0 2em;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  font-size: 40px;
+  align-items: center;
+  justify-items:center ;
+}
+#logo_link{
+  grid-row: 1/3;
+  width: 50%;
+}
+#logo_link img{
+width: 100%;
+}
+#navigation{
+  grid-column: 2/3;
+}
+#navigation a{
+  color: black;
+
+  margin: 0 30px;
+  text-decoration: none;
+}
+#navigation a:hover{
+  color: #FFE8D6;
+  background-color: #6B705C;
+
+}
+
+/* *//* Main STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
+
+
+#hero {
+  margin: auto;
+  Display:grid;
+  width:90%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.hero_img{
+  width: 100%;
+  grid-column: 1/4;
+  grid-row: 1/4;
+}
+#hero_title{
+  color: white;
+  font-size: 40px;
+  align-content: center;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  margin: auto;
+}
+
+#main_msg{
+  border-style: solid;
+  border-width: 10px;
+  border-color: #CB997e;
+  background-color: #CB997E;
+  margin: 30px 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+#main_msg p{
+  font-size: 30px;
+  align-content: center;
+  
+}
+#main_msg img{
+  justify-content: center;
+  align-content: center;
+  margin:auto;
+}
+
+
+#produce{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  font-size: 30px;
+  
+}
+#produce p{
+  margin: 30px;
+}
+#produce img{
+  margin: 30px 0px;
+}
+#corn{
+  margin: 0px 30px;
+  background-color: #DDBEA9;
+
+}
+#corn p{
+  font-size: 30px;
+  margin: 30px;
+}
+#peaches{
+  background-color: #DDBEA9;
+  margin: 0px 30px;
+}
+#potatoes{
+  background-color: #DDBEA9;
+  margin: 0px 30px;
+
+}
+/* *//* Footer STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
+footer{
+  background-color: #B7B7A4;
+  text-decoration: none; 
+}
+#footer_grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;  
+  margin: 30px 100px;
+  border-style: solid;
+  border-width: 10px;
+  border-color: #B7B7A4;
+  justify-items: center;
+  align-items: center;
+}
+#siteplan_img{
+  width: 21%;
+}
+
+
+
+
+
+
+/* *//* Form STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
 form {
     /* Center the form on the page */
     margin: 0 auto;
@@ -77,7 +216,7 @@ form {
       right: 0;
       padding: .5em;
       /* make this element invisible until we are ready for it */
-      display: none;      
+      display: none;     
   }
   .moveDown {
       margin-top: 3em;
