--- a/ScoresbyFarms/styles/styles.css
+++ b/ScoresbyFarms/styles/styles.css
@@ -4,6 +4,14 @@
 #content{
 background-color: #FFE8D6;
 text-align: center;
+font-family: Courier ;
+
+}
+p{
+  font-family: Tahoma ;
+}
+a{
+  font-family: Tahoma;
 }
 
 
@@ -25,7 +33,8 @@ header{
   width: 50%;
 }
 #logo_link img{
-width: 100%;
+  margin: 10px 0;
+  width: 100%;
 }
 #navigation{
   grid-column: 2/3;
@@ -40,6 +49,9 @@ width: 100%;
   color: #FFE8D6;
   background-color: #6B705C;
 
+}
+#brand_name{
+  margin: 0;
 }
 
 /* *//* Main STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
@@ -58,6 +70,7 @@ width: 100%;
   grid-row: 1/4;
 }
 #hero_title{
+  text-shadow: 2px 2px 4px black;
   color: white;
   font-size: 40px;
   align-content: center;
