--- a/ScoresbyFarms/styles/styles.css
+++ b/ScoresbyFarms/styles/styles.css
@@ -1,11 +1,13 @@
 
 
-
+body{
+  margin:0;
+}
 #content{
-background-color: #FFE8D6;
+  background: rgb(221,190,169);
+  background: linear-gradient(180deg, rgba(203,153,126,1) 0%, rgba(255,232,214,1) 100%);
 text-align: center;
 font-family: Courier ;
-
 }
 p{
   font-family: Tahoma ;
@@ -20,20 +22,26 @@ a{
 header{
   background-color: #B7B7A4;
 }
+header h2{
+  font-size: calc(2rem + 1vw) ;
+}
+header a{
+  font-size: calc(2rem + 1vw) ;
+}
 #header_content{
   margin: 0 2em;
   display: grid;
   grid-template-rows: 1fr 1fr;
-  font-size: 40px;
   align-items: center;
   justify-items:center ;
 }
+
 #logo_link{
+  margin: 10px 0;
   grid-row: 1/3;
-  width: 50%;
+  width: 75%;
 }
 #logo_link img{
-  margin: 10px 0;
   width: 100%;
 }
 #navigation{
@@ -72,7 +80,8 @@ header{
 #hero_title{
   text-shadow: 2px 2px 4px black;
   color: white;
-  font-size: 40px;
+  font-size: calc(1rem + 2vw) ;
+
   align-content: center;
   grid-column: 2/3;
   grid-row: 2/3;
@@ -89,11 +98,12 @@ header{
   grid-template-columns: 1fr 1fr;
 }
 #main_msg p{
-  font-size: 30px;
+  font-size: calc(0.5rem + 1vw) ;
   align-content: center;
   
 }
 #main_msg img{
+  width: 75%;
   justify-content: center;
   align-content: center;
   margin:auto;
@@ -128,6 +138,70 @@ header{
 #potatoes{
   background-color: #DDBEA9;
   margin: 0px 30px;
+
+}
+
+/*          About Us Page                                  */
+#title{
+  font-size: calc(2.5rem + 1vw) ;
+  
+}
+#profile{
+  display:grid;
+  background-color:  #CB997E;
+  margin: 2%;
+  font-size: calc(0.9rem + 1vw) ;
+}
+#eric{
+  border: #000 0.2em solid;
+  background: rgb(183,183,164);
+  background: linear-gradient(180deg, rgba(183,183,164,1) 0%, rgba(107,112,92,1) 35%, rgba(107,112,92,1) 63%, rgba(183,183,164,1) 100%);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 2%;
+}
+#eric_img{
+  width: 100%;
+  margin-right:auto;
+}
+#eric_p{
+  margin: auto 5%;
+  text-align: left;
+}
+#shelia{
+  background: rgb(183,183,164);
+  background: linear-gradient(180deg, rgba(183,183,164,1) 0%, rgba(107,112,92,1) 35%, rgba(107,112,92,1) 63%, rgba(183,183,164,1) 100%);
+  border: #000 0.2em solid;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 2%;
+}
+#shelia_img{
+  width: 100%;
+  margin-left:auto;
+}
+#shelia_p{
+  margin: auto 5%;
+  text-align: right;
+}
+
+#story{
+  margin: 5%;
+  background: rgb(107,112,92);
+  background: linear-gradient(180deg, rgba(107,112,92,1) 0%, rgba(137,137,108,1) 26%, rgba(183,183,164,1) 78%, rgba(162,162,148,1) 100%);
+  
+  border: #000 0.2em solid;
+  font-size: calc(0.75rem + 1vw) ;
+
+}
+#story h2{
+  font-size: calc(2rem + 1vw) ;
+}
+#story img{
+  margin-left: 0.5em;
+  margin-right: 1em;
+  width: 21%;
+  float: right; 
 
 }
 /* *//* Footer STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
