--- a/ScoresbyFarms/styles/styles.css
+++ b/ScoresbyFarms/styles/styles.css
@@ -33,16 +33,16 @@ header a{
   display: grid;
   grid-template-rows: 1fr 1fr;
   align-items: center;
-  justify-items:center ;
+  justify-items: center;
 }
 
 #logo_link{
-  margin: 10px 0;
   grid-row: 1/3;
-  width: 75%;
+  width: 100%;
 }
 #logo_link img{
-  width: 100%;
+  margin: 5px;
+  width: 50%;
 }
 #navigation{
   grid-column: 2/3;
@@ -60,6 +60,8 @@ header a{
 }
 #brand_name{
   margin: 0;
+  font-size: calc(3rem + 1vw) ;
+  
 }
 
 /* *//* Main STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
@@ -153,7 +155,7 @@ header a{
   font-size: calc(0.9rem + 1vw) ;
 }
 #eric{
-  border: #000 0.2em solid;
+  /* border: #000 0.2em solid; */
   background: rgb(183,183,164);
   background: linear-gradient(180deg, rgba(183,183,164,1) 0%, rgba(107,112,92,1) 35%, rgba(107,112,92,1) 63%, rgba(183,183,164,1) 100%);
   display: grid;
@@ -171,7 +173,7 @@ header a{
 #shelia{
   background: rgb(183,183,164);
   background: linear-gradient(180deg, rgba(183,183,164,1) 0%, rgba(107,112,92,1) 35%, rgba(107,112,92,1) 63%, rgba(183,183,164,1) 100%);
-  border: #000 0.2em solid;
+  /* border: #000 0.2em solid; */
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin: 2%;
@@ -190,7 +192,7 @@ header a{
   background: rgb(107,112,92);
   background: linear-gradient(180deg, rgba(107,112,92,1) 0%, rgba(137,137,108,1) 26%, rgba(183,183,164,1) 78%, rgba(162,162,148,1) 100%);
   
-  border: #000 0.2em solid;
+  /* border: #000 0.2em solid; */
   font-size: calc(0.75rem + 1vw) ;
 
 }
@@ -204,6 +206,72 @@ header a{
   float: right; 
 
 }
+
+/*          Contact Us Page                                  */
+
+#info_box{
+  border: #000 3px solid;
+  background-color: #CB997E;
+  margin: 2% 5%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+}
+#Banner{
+  grid-column: 1/4;
+}
+#img1{
+  margin: 5% auto;
+}
+#info{
+  font-size: calc(0.2rem + 1vw) ;
+
+  text-align: center;
+  margin: auto auto;
+}
+#hours{
+  margin:auto;
+  margin-bottom: 12%;
+  text-align: center;
+}
+#hours p{
+  font-size: calc(0.2rem + 1vw) ;
+
+}
+
+#hours h1{
+  font-size: calc(0.5rem + 1vw) ;
+}
+
+#email_form{  
+  display: grid ;
+  grid-template-columns: 1fr 1fr;
+  margin: 2% 5%;
+  border: #000 3px solid;
+  background-color: #CB997E;
+}
+#email_form p{
+margin: 4%;
+}
+#email_banner{
+  margin: 0 auto;
+  grid-column: 1/3;
+}
+#email_info{
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 2%;
+}
+#email_info img{
+  margin-left: auto;
+}
+#form{
+  margin-right: auto;
+}
+
+
+
 /* *//* Footer STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
 footer{
   background-color: #B7B7A4;
@@ -231,8 +299,7 @@ footer{
 /* *//* Form STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
 form {
     /* Center the form on the page */
-    margin: 0 auto;
-    width: 400px;
+    width: 200px;
     /* Form outline */
     padding: 1em;
     border: 1px solid #ccc;
@@ -251,7 +318,6 @@ form {
   
   label {
     /* Uniform size & alignment */
-    display: inline-block;
     width: 90px;
     text-align: right;
   }
@@ -263,7 +329,7 @@ form {
     font: 1em sans-serif;
   
     /* Uniform text field size */
-    width: 300px;
+    width: 200px;
     box-sizing: border-box;
   
     /* Match form field borders */
