--- a/ScoresbyFarms/styles/styles.css
+++ b/ScoresbyFarms/styles/styles.css
@@ -20,32 +20,32 @@ a{
 /* *//* Header STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
 
 header{
+  padding-top: 1%;
   background-color: #B7B7A4;
 }
-header h2{
-  font-size: calc(2rem + 1vw) ;
-}
 header a{
-  font-size: calc(2rem + 1vw) ;
+  font-size: calc(1.5rem + 1vw) ;
 }
 #header_content{
-  margin: 0 2em;
+  margin: 0 5%;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 4fr;
+  grid-template-rows: 1fr 2fr;
   align-items: center;
   justify-items: center;
 }
 
 #logo_link{
   grid-row: 1/3;
+  grid-column: 2/3;
   width: 100%;
 }
 #logo_link img{
   margin: 5px;
-  width: 50%;
+  width: 80%;
 }
 #navigation{
-  grid-column: 2/3;
+  grid-column: 3/4;
 }
 #navigation a{
   color: black;
@@ -59,8 +59,9 @@ header a{
 
 }
 #brand_name{
+  grid-column: 3/4;
   margin: 0;
-  font-size: calc(3rem + 1vw) ;
+  font-size: calc(2.5rem + 1vw) ;
   
 }
 
