--- a/ScoresbyFarms/styles/styles.css
+++ b/ScoresbyFarms/styles/styles.css
@@ -297,6 +297,37 @@ footer{
 
 
 
+
+
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #B7B7A4;
+  color: black;
+}
+
+.previous {
+  background-color: #CB997E;
+  color: black;
+}
+
+.next {
+  background-color: #6B705C;
+  color: black;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+#next{
+  margin:2%;
+}
 /* *//* Form STUFF*/ /* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* *//* */
 form {
     /* Center the form on the page */
